# cutepad

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  TODO  config.h.in  cutepad.desktop  resources.qrc
data/: MANUAL  cutepad.appdata.xml  cutepad.desktop
src/: application.cpp  application.h  cutepadadaptor.cpp  cutepadadaptor.h  encodings.cpp  encodings.h  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  replacebar.cpp  replacebar.h  searchbar.cpp  searchbar.h  settings.ui  settingsdialog.cpp  settingsdialog.h  statusbar.cpp  statusbar.h  textcodec.h  textedit.cpp  textedit.h
tests/: Hello_UTF16.txt  readonlyfile.txt
